@@ -59,9 +59,9 @@ case "$option" in
     y*) sudo apt-get remove -y wolfram-engine ;;
 esac
 
-read -p "Other unneeded packages: ca-certificates, libraspberrypi-doc, locales, manpages. (Free 52.1 MB) (y/n) " option
+read -p "Other unneeded packages: ca-certificates, libraspberrypi-doc, manpages. (Free 52.1 MB) (y/n) " option
 case "$option" in
-    y*) sudo apt-get -y remove ca-certificates libraspberrypi-doc locales manpages ;;
+    y*) sudo apt-get -y remove ca-certificates libraspberrypi-doc manpages ;;
 esac
 
 sudo apt-get autoremove -y
