@@ -2,6 +2,7 @@
 ==========
 
 · Update Tweaks > other & removepkg scripts. 
+· Update Games > minecraft, quake, crispydoom.
 
 (08/12/14)
 ==========
